[project]
name = "bupt-ucloud-tool"
version = "0.2.0"
description = "BUPT uCloud course resource downloader CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rich>=14.3.3",
]

[project.scripts]
bupt-ucloud = "main:cli"
